# agent_trace

./: .env.example  .gitignore  MANIFEST.in  README.md  memory_AgentTrace_LinkedIn_Post_Test.md  memory_Compresr_Integration.md  memory_LexOculus_Assessment.md  memory_LinkedIn_Strategy_AgentTrace.md  memory_Node_JS_SDK_and_OTLP.md  memory_Phase_1_Reliability.md  memory_Phase_2_DevEx.md  memory_Phase_3_CICD.md  memory_production_test_suite.md  memory_realworld_smoke_test.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml  test.yml
agenttrace/: __init__.py  auto.py  compare.py  decorators.py  exporter.py  judge.py  models.py  otlp_adapter.py  server.py  storage.py  utils.py
agenttrace-go/: agenttrace.go  agenttrace_test.go  go.mod  go.sum
agenttrace-go/examples/basic_openai/: main.go
agenttrace-go/examples/custom_tools/: main.go
agenttrace-go/instrumentation/openai/: openai.go
agenttrace-node/: package-lock.json  package.json
agenttrace-node/examples/: basic.cjs  basic.ts  custom_tracking.ts  vercel_ai.js  vercel_ai.ts  vercel_ai_stream.ts  vercel_ai_tools.ts
agenttrace-node/src/: decorators.ts  index.ts
agenttrace/integrations/: __init__.py  crewai.py  langchain.py
agenttrace/static/: index.html
agenttrace/static/assets/: index-BKKNSwYL.css  index-BqLOtqym.js  index-CWybJr0K.js  index-CYDruITU.css  (+2 more)
examples/: async_demo.py  complex_agent_demo.py  demo.py  judge_demo.py  langchain_example.py
tests/: conftest.py  test_combined_pipeline.py  test_decorators.py  test_failure_modes.py  test_judge.py  test_multi_step_chain.py  test_react_agent.py  test_stress.py
tests/e2e/: realworld_research_agent.py  test_init.py  test_openai_direct.py  verify_traces.py
ui/: lint_output.txt  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
